// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AllGroupsSettingsRow matches the last snapshot 1`] = `
<SettingsRow
  imageSrc={
    Object {
      "testUri": "../../../assets/hylo-merkaba.png",
    }
  }
  name="All Groups"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`MembershipSettingsRow matches the last snapshot 1`] = `
<SettingsRow
  imageUrl="foo.png"
  name="Foomunity"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`MessageSettingsRow matches the last snapshot 1`] = `
<SettingsRow
  iconName="Messages"
  name="Messages"
  settings={
    Object {
      "sendEmail": true,
    }
  }
  update={[Function]}
/>
`;

exports[`NotificationSettings matches the last snapshot 1`] = `
<ScrollView
  contentContainerStyle={
    Object {
      "marginTop": 30,
      "paddingBottom": 100,
    }
  }
>
  <MessageSettingsRow
    settings={
      Object {
        "sendEmail": true,
        "sendPushNotifications": false,
      }
    }
    updateMessageSettings={[Function]}
  />
  <AllGroupsSettingsRow
    settings={
      Object {
        "sendEmail": false,
        "sendPushNotifications": true,
      }
    }
    updateAllGroups={[Function]}
  />
  <MembershipSettingsRow
    membership={
      Object {
        "group": Object {
          "avatarUrl": "foo1.png",
          "id": "12",
        },
        "id": "11",
        "settings": Object {
          "sendEmail": true,
          "sendPushNotifications": false,
        },
      }
    }
    updateMembershipSettings={[Function]}
  />
  <MembershipSettingsRow
    membership={
      Object {
        "group": Object {
          "avatarUrl": "foo2.png",
          "id": "22",
        },
        "id": "21",
        "settings": Object {
          "sendEmail": false,
          "sendPushNotifications": true,
        },
      }
    }
    updateMembershipSettings={[Function]}
  />
</ScrollView>
`;

exports[`SettingsIcon matches the last snapshot 1`] = `
<ForwardRef
  onPress={[Function]}
>
  <Icon
    name="FooRow"
  />
</ForwardRef>
`;

exports[`SettingsRow matches snapshot when expanded 1`] = `
<View>
  <View>
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      numberOfLines={1}
    >
      Foo Row
    </Text>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        name="ArrowUp"
      />
    </View>
  </View>
  <View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        name="PushNotification"
      />
    </View>
    <View
      accessible={true}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <Icon
        name="EmailNotification"
      />
    </View>
  </View>
</View>
`;

exports[`SettingsRow matches the last snapshot 1`] = `
<View>
  <View>
    <Image
      source={
        Object {
          "uri": "foo.png",
        }
      }
    />
    <Text
      numberOfLines={1}
    >
      Foo Row
    </Text>
    <ForwardRef
      onPress={[Function]}
    >
      <Icon
        name="ArrowDown"
      />
    </ForwardRef>
  </View>
</View>
`;

exports[`SettingsRow matches the last snapshot with iconName 1`] = `
<View>
  <View>
    <Icon
      name="iconname"
    />
    <Text
      numberOfLines={1}
    >
      Foo Row
    </Text>
    <ForwardRef
      onPress={[Function]}
    >
      <Icon
        name="ArrowDown"
      />
    </ForwardRef>
  </View>
</View>
`;
